--- a/widen.css
+++ b/widen.css
@@ -1,12 +1,11 @@
 /* Code View */
 
-div.diff-view, #files {
+#js-repo-pjax-container{
 	width: 94%;
-	left: 0;
-	margin: 0 3%;
+	left: 0px;
+	margin: 0px 3%;
 	position: absolute;
 }
-
 
 /* Gist */
 
